Fixed message scrolling behind the input bar, need to make the input bar auto-selected

--- a/src/views/Chat.css
+++ b/src/views/Chat.css
@@ -6,6 +6,13 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    overflow-y: scroll;
+    position: fixed;
+    top: 30px;
+    bottom: auto;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 80px);
 }
 
 .blurred {
